fixed add item form hiding the last item behind teh form actions

--- a/core/public/stylesheets/refinery/refinery.css
+++ b/core/public/stylesheets/refinery/refinery.css
@@ -1671,6 +1671,7 @@ ul.items .item.record .record_fields {
 
 .add_item_dialog table {
   width: 100%;
+  margin-bottom: 36px;
   border-collapse:collapse;
   border-spacing: 0;
 }
